crates/analyzer/tests/snapshots/errors__overflow_u32_pos.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: literal out of range for `u32`
  ┌─ [snippet]:3:7
  │
3 │   u32(4294967296)
  │       ^^^^^^^^^^ does not fit into type `u32`


